--- a/src/styles/styleKanban.css
+++ b/src/styles/styleKanban.css
@@ -1,216 +1,191 @@
 .container-kanban {
-    width: 100%;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 21px;
-    display: flex;
-    flex-direction: column;
+  width: 100%;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+  display: flex;
+  flex-direction: column;
 }
 
-.kanban-heading, .kanban-footer-task {
-    background-color: #0067A3;
-    color: #FFFFFF;
-    padding: 0 14px;
-    height: 55px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.kanban-heading,
+.kanban-footer-task {
+  background-color: #0067A3;
+  color: #FFFFFF;
+  padding: 0 14px;
+  height: 55px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .tasks {
-    display: flex;
-    justify-content: space-between;
-    width: 333px;
+  display: flex;
+  justify-content: space-between;
+  width: 333px;
 }
 
 .kanban-heading-text {
-    font-size: 28px;
-    line-height: 33px;
-    margin-bottom: 0;
+  font-size: 28px;
+  line-height: 33px;
+  margin-bottom: 0;
 }
 
 .user-menu {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .name-user {
-    margin-right: 15px;
+  margin-right: 15px;
 }
 
 .img-user {
-    width: 40px;
-    height: 40px;
+  width: 40px;
+  height: 40px;
 }
 
-/* .button-menu {
-    background-color: rgba(28,28,28,0);
-    border: 0;
-} */
-
 .kanban-board {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    padding: 25px 14px;
-    height: 700px;
-    background-color: #0079bf;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  padding: 25px 14px;
+  height: 700px;
+  background-color: #0079bf;
 }
 
 .kanban-block {
-    padding: 12px;
-    width: 282px;
-    min-height: 120px;
-    max-height: 538px;
-    /* overflow-y: scroll;
-    scroll-behavior: smooth;
-    scrollbar-color: #CBCBCB #FFFFFF;
-    scrollbar-width: thin; */
-    background: #EBECF0;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start;
+  padding: 12px;
+  width: 282px;
+  min-height: 120px;
+  max-height: 538px;
+  background: #EBECF0;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
 }
-
-
 
 .button-add-backlog,
 .button-add-ready,
 .button-add-progress,
 .button-add-finished,
 .button-delete {
-    color: #5E6C84;
-    text-align: left;
-    border: 0;
-    border-radius: 10px;
-    margin-top: 8px;
-    width: 246px;
-    padding: 5px;
+  color: #5E6C84;
+  text-align: left;
+  border: 0;
+  border-radius: 10px;
+  margin-top: 8px;
+  width: 246px;
+  padding: 5px;
 }
 
 .input-task-backlog,
 .input-task-ready,
 .input-task-progress,
 .input-task-finished {
-    border: 0;
-    border-radius: 10px;
-    padding: 5px;
-    width: 246px;
+  border: 0;
+  border-radius: 10px;
+  padding: 5px;
+  width: 246px;
 }
 
 .input-task-backlog:focus,
 .input-task-ready:focus,
 .input-task-progress:focus,
 .input-task-finished:focus {
-    outline: none;
-    border: 2px solid #5E6C84;
+  outline: none;
+  border: 2px solid #5E6C84;
 }
 
 .dropdown-task-backlog,
 .dropdown-task-ready,
 .dropdown-task-progress,
 .dropdown-task-finished {
-    list-style: none;
-    padding-left: 0;
-    margin: 22px 0;
-    overflow-y: scroll;
-    scroll-behavior: smooth;
-    scrollbar-color: #CBCBCB #FFFFFF;
-    scrollbar-width: thin;
+  list-style: none;
+  padding-left: 0;
+  margin: 22px 0;
+  overflow-y: scroll;
+  scroll-behavior: smooth;
+  scrollbar-color: #CBCBCB #FFFFFF;
+  scrollbar-width: thin;
 }
 
 .list-task-backlog,
 .list-task-ready,
 .list-task-progress,
 .list-task-finished {
-    width: 235px;
-    background: #FFFFFF;
-    border-radius: 5px;
-    padding: 6px;
-    word-wrap: break-word;
-    margin: 9px 0;
+  width: 235px;
+  background: #FFFFFF;
+  border-radius: 5px;
+  padding: 6px;
+  word-wrap: break-word;
+  margin: 9px 0;
 }
 
 .button-deleteTask {
-    width: 246px;
-    border-radius: 5px;
-    padding: 6px;
-    margin: 9px 0;
+  width: 246px;
+  border-radius: 5px;
+  padding: 6px;
+  margin: 9px 0;
 }
-/* dropdawn */
-/* Style The Dropdown Button */
-/* .button-add-ready {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-  } */
-  
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    width: 246px;
-    border-radius: 10px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .tasks-from-backlog,
-  .tasks-from-ready,
-  .tasks-from-progress,
-  .tasks-from-finished {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .tasks-from-backlog:hover,
-  .tasks-from-ready:hover,
-  .tasks-from-progress:hover,
-  .tasks-from-finished:hover,
-  .tasks-delete:hover,
-  .user-delete:hover {
-    background-color: #aca8a852;
-    border-radius: 10px;
-}
-  
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
 
-  .title-task {
-    margin: 0 16px;
-  }
-  
-  .active-add:hover {
-    background-color: #87f390;
-    cursor: pointer;
-  }
-  
-  .no-active-add:hover {
-    background-color: #f5818b;
-    cursor: default;
-  }
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  width: 246px;
+  border-radius: 10px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.tasks-from-backlog,
+.tasks-from-ready,
+.tasks-from-progress,
+.tasks-from-finished {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.tasks-from-backlog:hover,
+.tasks-from-ready:hover,
+.tasks-from-progress:hover,
+.tasks-from-finished:hover,
+.tasks-delete:hover,
+.user-delete:hover {
+  background-color: #aca8a852;
+  border-radius: 10px;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.title-task {
+  margin: 0 16px;
+}
+
+.active-add:hover {
+  background-color: #87f390;
+  cursor: pointer;
+}
+
+.no-active-add:hover {
+  background-color: #f5818b;
+  cursor: default;
+}
  
 
 
